Find game by id
